--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
 </head>
 <body>
 
+<div id = "selections">
+
+    <button id="Rock">ROCK</button>
+    <button id="Paper">PAPER</button>
+    <button id="Scissors">SCISSORS</button>
+
+</div>
+
+<div id = "display">
+<!-- 
+    <p id="ownScore"></p>
+    <p id="oppScore"></p> -->
+
+</div>
+
 <script src = "index.js">
 
 
